tests/NormalTests/paczka1/small_fuzzy/75397624.err
Error in line 5: nDfzc S786 10,3
Error in line 13: nDfzc S635 78,8
